--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -185,6 +185,6 @@
     }
 
     body {
-        @apply bg-background text-foreground text-[1.3vmax] leading-[1.3];
+        @apply bg-(--black-3) text-foreground text-[1.3vmax] leading-[1.3];
     }
 }
