--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,6 +9,7 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     --font-poppins: 'Poppins', var(--font-sans);
+    --font-modern: 'Playwrite IT Moderna', var(--font-poppins);
     --radius-lg: var(--radius);
     --radius-md: calc(var(--radius) - 2px);
     --radius-sm: calc(var(--radius) - 4px);
@@ -55,6 +56,13 @@
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-ring: var(--sidebar-ring);
+
+    /*    custom z-index*/
+    --z-index-1: 1;
+    --z-index-5: 5;
+    --z-index-998: 998;
+    --z-index-555: 555;
+
 }
 
 /*
@@ -110,37 +118,6 @@
     --sidebar-border: hsl(0, 0%, 91%);
     --sidebar-ring: hsl(217.2, 91.2%, 59.8%);
 
-    /*    site colors */
-    --antique-white: #ebdccb;
-    --linen: #f0ebe3;
-    --dim-grey: #776a5c;
-    --dim-grey-2: #5c5c6c;
-    --dim-grey-3: #775c5c;
-    --dim-grey-4: #5c6c68;
-    --dim-grey-5: #5c6a77;
-    --gainsboro: #dfd8d0;
-    --white-smoke: #f6f4f2;
-    --white-smoke-2: #f3f2f5;
-    --black-3: #141d24;
-    --black-2: #3b3127;
-    --dark-slate-grey: #194141;
-    --dark-slate-grey-2: #014231;
-    --dark-slate-grey-3: #283f3f;
-    --dark-slate-grey-4: #2e4351;
-    --dark-slate-grey-5: #355761;
-    --cadet-blue: #788d85;
-    --grey: #6c7c7b;
-    --azure: #d9ebe9;
-    --tan: #c3aa94;
-    --light-grey: #c8d6d5;
-    --dark-grey: #ad9e9e;
-    --dark-grey-2: #8ca5ab;
-    --dark-grey-3: #9b9e93;
-    --primary-black: #3b3127;
-    --teal: #5c776c;
-    --saddle-brown: #523b25;
-    --saddle-brown-2: #6e4114;
-
 
 }
 
@@ -185,6 +162,6 @@
     }
 
     body {
-        @apply bg-(--black-3) text-foreground text-base md:text-[17px] text-[1.3vmax] leading-[1.3];
+        @apply bg-white text-[rgba(5,44,71,.8)] min-w-[320px] font-[400] text-[18px] leading-[1.7];
     }
 }
